modify display name.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.danbaidong.smoothnormal",
   "version": "1.0.0",
-  "displayName": "SmoothNormal",
+  "displayName": "Danbaidong RP SmoothNormal",
   "unity": "2022.2",
   "documentationUrl": "https://github.com/danbaidong1111/SmoothNormal",
   "changelogUrl": "https://github.com/danbaidong1111/SmoothNormal/commits/main",
